--- a/index.html
+++ b/index.html
@@ -40,5 +40,49 @@
          <b>ссылка на дс сервер
            <a href="https://discord.gg/7m26bk4VQz">FruitSpace(GDfruit)
       </p>
+<style type="text/css" >
+  p {
+  color: gray;
+}
+h {
+  color: gray;
+}
+
+
+}
+g {
+  color: white;
+}
+
+BODY {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-image: img src = img/bg.png;
+  background-size: 84%;
+  background-position: 25% 35%;
+  font-family: Georgia;
+  }
+H1 {
+  font-size: 50px;
+  font-weight: normal;
+  cursor: pointer;
+  text-shadow: 0 0 0 crimson;
+  color: rgb(127, 232, 255);
+  animation: shadows 4s infinite ease-in;
+  }
+
+@keyframes shadows {
+  60% {
+    text-shadow: 0 0 0 rgb(127, 232, 255);
+  }
+  90% {
+    text-shadow: 0 20px 30px rgb(127, 232, 255);
+  }
+  100% {
+      text-shadow: 0 20px 30px rgb(127, 232, 255);
+  }
+}
+           </style>
   </body>
     </html>
