--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ BODY {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-image: img src = imgs/bg.png;
+  background-image: src = imgs/bg.png;
   background-size: 84%;
   background-position: 25% 35%;
   font-family: Georgia;
