--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ BODY {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-image: url(https://discord.com/channels/@me/1049046611738759178/1055862803526852660);
+  background-image: url(imgs/bg.png);
   background-size: 84%;
   background-position: 25% 35%;
   font-family: Georgia;
