--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
       <title>GDfruit</title>
       </head>
     <body>
+      html {
+  background-image: url(imgs/bg.png);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
       <style type="text/css" >
   p {
   color: gray;
