--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 }
       <style type="text/css" >
   p {
-  color: rgb(234, 255, 0);
+  color: gray;
 }
 h {
   color: rgb(234, 255, 0);
@@ -31,7 +31,7 @@ h {
 
 }
 g {
-  color: white;
+  color: rgb(255, 170, 0);
 }
 
 BODY {
