--- a/index.html
+++ b/index.html
@@ -68,19 +68,23 @@ H1 {
       <h1>GDfruit</h1>
         </k>
       <hr>
-      <h2>О GDfruit:</h2>
       <g>
-        <b>Уникальное ядро <i>DScore</b></i></g>
+      <h2>О GDfruit:</h2>
+      
+        <b>Уникальное ядро <i>DScore</b></i>
+      </g>
         <p>
           <i>строй уровни и общайся!</i>
         </p>
 <g>
-  <b>Свой <i>дискорд бот!</b></i></g>
+  <b>Свой <i>дискорд бот!</b></i>
+      </g>
 <p>
   <i>оценка уровней и отправка реквкстов происходит через него</i>
   </p>
-  
+  <g>
     <b>Подробнее:</b>
+      </g>
     <br>
      <h> <i>GD Fruit v2 это новая разработка админов FruitSpace и GD Fruit.
 <p>
