--- a/index.html
+++ b/index.html
@@ -64,9 +64,8 @@ H1 {
   }
 }
            </style>
-      <k>
+      
       <h1>GDfruit</h1>
-        </k>
       <hr>
       <g>
       <h2>О GDfruit:</h2>
@@ -77,9 +76,7 @@ H1 {
         <p>
           <i>строй уровни и общайся!</i>
         </p>
-<g>
-  <b>Свой <i>дискорд бот!</b></i>
-      </g>
+      <b><b>Свой <i>дискорд бот!</b></i></b>
 <p>
   <i>оценка уровней и отправка реквкстов происходит через него</i>
   </p>
