--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ H1 {
         <p>
           <i>строй уровни и общайся!</i>
         </p>
-      <b><b>Свой <i>дискорд бот!</b></i></b>
+      <g><b>Свой <i>дискорд бот!</b></i></g>
 <p>
   <i>оценка уровней и отправка реквкстов происходит через него</i>
   </p>
