--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 h {
   color: rgb(234, 255, 0);
 }
-g {
+l {
   color: rgb(255, 170, 0);
 }
 
@@ -64,22 +64,22 @@ H1 {
       
       <h1>GDfruit</h1>
       <hr>
-      <g>
+      <l>
       <h2>О GDfruit:</h2>
-      </g>
-      <g>
+      </l>
+      <l>
         <b>Уникальное ядро <i>DScore</b></i>
-      </g>
+      </l>
         <p>
           <i>строй уровни и общайся!</i>
         </p>
-      <g><b>Свой <i>дискорд бот!</b></i></g>
+      <l><b>Свой <i>дискорд бот!</b></i></l>
 <p>
   <i>оценка уровней и отправка реквкстов происходит через него</i>
   </p>
-  <g>
+  <l>
     <b>Подробнее:</b>
-      </g>
+      </l>
     <br>
      <h> <i>GD Fruit v2 это новая разработка админов FruitSpace и GD Fruit.
 <p>
