--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ BODY {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-image: url(imgs/bg.png);
+  backround-color: #000;
   background-size: 84%;
   background-position: 25% 35%;
   font-family: Georgia;
