--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
       <title>GDfruit</title>
       </head>
     <body>
-  
-}
-      <style type="text/css" >
-            html {
+      <style>
+  html {
   background-image: url(imgs/bg.png);
   background-repeat: no-repeat;
   background-position: center center;
@@ -22,6 +20,10 @@
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+}
+      </style>
+      <style type="text/css" >
+            
   p {
   color: rgb(234, 255, 0);
 }
