--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <title>GDfruit</title>
       </head>
     <body>
-      <style>
+      <style type="background/html">
   html {
   background-image: url(imgs/bg.png);
   background-repeat: no-repeat;
@@ -22,6 +22,7 @@
   background-size: cover;
 }
       </style>
+      
       <style type="text/css" >
             
   p {
